src/test/resources/highlighting/functionCall.m
fun()
fun(1, 2)
fun(1,<error descr="'...' or <argument> expected, got ')'"> </error>)
fun(1 <error descr="'&', '&&', '*', '+', '-', '.*', '...', '.^', <, <=, '=', '==', '>', '>=', DOT_TRANSPOSE, TRANSPOSE, '^', '|', '||' or '~=' expected, got '2'">2</error>)
fun(<error descr="'...' or <argument> expected">
</error>